package com.xyb.a4factory.a4absfactory;

class ACola implements ADrink {

    @Override
    public String getDrinkName() {
        return "A可乐";
    }
}
