package com.xyb.a4factory.a4absfactory;

interface ADrink {
    public String getDrinkName();
}
