package com.xyb.a4factory.a4absfactory;

class AFanta implements ADrink {

    @Override
    public String getDrinkName() {
        return "A芬达";
    }
}
