package com.xyb.a4factory.a4absfactory;

class BCola implements BDrink {

    @Override
    public String getDrinkName() {
        return "B可乐";
    }
}
