package com.xyb.a4factory.a4absfactory;

interface BDrink {
    public String getDrinkName();
}
