package com.xyb.a4factory.a4absfactory;

class BFanta implements BDrink {

    @Override
    public String getDrinkName() {
        return "B芬达";
    }
}
